tests/snapshots/yaml_suite_snapshots__yaml_suite_A6F9_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "strip: |-\n  text\nclip: |\n  text\nkeep: |\n  text\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2795034"
  json: "{\n  \"strip\": \"text\",\n  \"clip\": \"text\\n\",\n  \"keep\": \"text\\n\"\n}\n"
  name: Spec Example 8.4. Chomping Final Line Break
  tags: spec literal scalar
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :strip\n   =VAL |text\n   =VAL :clip\n   =VAL |text\\n\n   =VAL :keep\n   =VAL |text\\n\n  -MAP\n -DOC\n-STR\n"
  yaml: "strip: |-\n  text\nclip: |\n  text\nkeep: |+\n  text\n"
