tests/snapshots/yaml_suite_snapshots__yaml_suite_AB8U_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Sequence entry that looks like two with wrong indentation
  from: "@perlpunk"
  tags: scalar sequence
  yaml: "- single multiline\n - sequence entry\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :single multiline - sequence entry\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \"single multiline - sequence entry\"\n]\n"
  dump: "- single multiline - sequence entry\n"
