tests/snapshots/yaml_suite_snapshots__yaml_suite_AVM7_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Empty Stream
  from: "https://github.com/ingydotnet/yaml-pegex-pm/blob/master/test/misc.tml"
  tags: edge
  yaml: "∎\n"
  tree: "+STR\n-STR\n"
  json: ""
