tests/snapshots/yaml_suite_snapshots__yaml_suite_AVM7_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: "https://github.com/ingydotnet/yaml-pegex-pm/blob/master/test/misc.tml"
  json: ""
  name: Empty Stream
  tags: edge
  tree: "+STR\n-STR\n"
  yaml: "∎\n"
